--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
     <div class="container">
       <div class="row">
         <h2>Page Content</h2>
-        Herp derpsum herpderpsmer nerpy herpem derpy der berp derp terpus herderder. Sherpus tee berp perper mer derpus le herderder derps derperker. Der perp me merp derpsum terp ter tee, derps ler. Merp derpy pee ner. Der derp merp dee, serp tee ner mer. Herpem ter, herp ner le. Derpler ler sherlamer me tee merpus. Ter sherper derpus terp, nerpy der derpy derps sherp. Der derpus ner, herderder derp. Herpderpsmer ter sherlamer derpy dee tee nerpy derp. Dee me sherp der herderder merp merpus derpsum. Dee berps sherpus mer ler, herp le sherlamer!
+        Early in the film Anna and Joy are seen in the Birch household watching a white rat. Later in the film, when Keller decides to take matters into his own hands and leaves to find Alex, the scene cuts again to the rat at Birch household, but now it is black, foreshadowing Keller Dover's transition from holy man to sinner
         <br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-        Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-        dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-        Aliquam in felis sit amet augue.
+        The first time it was submitted to the MPAA, it received an NC-17 rating due to its tone and subject matter. The film's torture scenes were later cut by a couple of frames along with scenes suggesting pedophilia and it then received the R rating
         <br>
       </div>
       <hr>
@@ -55,10 +52,7 @@
     <div class="container">  
       <div class="row">
         <h2>Page Content</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-        Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-        dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-        Aliquam in felis sit amet augue.
+        Keller Dover: Our Father, who art in Heaven, hallowed be thy name. Thy kingdom come, thy will be done, on earth as it is in heaven. Give us this day our daily bread, and forgive us our trespasses, as we forgive those who trespass against us. Lead us not into temptation, but deliver us from evil. For the kingdom, the power and the glory are yours, now and forever. Amen.
         <h2>Page Content</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
         Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
